--- a/flutter_leave_lc/android/app/build.gradle
+++ b/flutter_leave_lc/android/app/build.gradle
@@ -27,17 +27,17 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 android {
     compileSdkVersion flutter.compileSdkVersion
 
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
+//    compileOptions {
+//        sourceCompatibility JavaVersion.VERSION_1_8
+//        targetCompatibility JavaVersion.VERSION_1_8
+//    }
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.leave"
-        minSdkVersion flutter.minSdkVersion
+        applicationId "com.example.flutterapplc"
+        minSdkVersion 19
         targetSdkVersion flutter.targetSdkVersion
-        versionCode 6
+        versionCode 1
         versionName "1.0.0"
         multiDexEnabled true
     }
@@ -78,18 +78,19 @@ flutter {
 }
 
 dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.aar'])
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-    implementation fileTree(dir: 'libs', include: ['*.aar'])
+
     implementation 'com.android.support:multidex:1.0.3'
     //混合推送需要的包
-    implementation('cn.leancloud:mixpush-vivo:8.2.4')
+    implementation('cn.leancloud:mixpush-xiaomi:8.2.18')
 
     //即时通信与推送需要的包
-    implementation 'cn.leancloud:realtime-android:8.2.4'
-    implementation 'cn.leancloud:storage-android:8.2.4'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    implementation 'cn.leancloud:realtime-android:8.2.18'
+    implementation 'cn.leancloud:storage-android:8.2.18'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
