--- a/flutter_leave_lc/android/app/src/main/AndroidManifest.xml
+++ b/flutter_leave_lc/android/app/src/main/AndroidManifest.xml
@@ -3,8 +3,14 @@
     package="com.example.flutterapplc"
     android:versionCode="1"
     android:versionName="1.0.0">
-    <!-- 基本模块（必须）START -->
+    <!-- 小米 SDK 需要的权限。 -->
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <permission android:name="com.example.flutterapplc.permission.MIPUSH_RECEIVE"
+        android:protectionLevel="signature" />
+    <uses-permission android:name="com.example.flutterapplc.permission.MIPUSH_RECEIVE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <!-- 基本模块 END -->
     <!-- io.flutter.app.FlutterApplication is an android.app.Application that
@@ -31,39 +37,81 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.xiaomi.mipush.sdk.NotificationClickedActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:launchMode="singleInstance"
+            android:exported="true"
+            android:enabled="true">
+        </activity>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
         <service
-            android:name="com.vivo.push.sdk.service.CommandClientService"
-            android:permission="com.push.permission.UPSTAGESERVICE"
-            android:exported="true"/>
+            android:name="com.xiaomi.push.service.XMPushService"
+            android:enabled="true"
+            android:process=":pushservice"/>
 
-        <activity
-            android:name="com.vivo.push.sdk.LinkProxyClientActivity"
+        <service
+            android:name="com.xiaomi.push.service.XMJobService"
+            android:enabled="true"
             android:exported="false"
-            android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar" /> <!-- push应用定义消息receiver声明 -->
-        <receiver android:name=".MyPushMessageReceiver"
+            android:permission="android.permission.BIND_JOB_SERVICE"
+            android:process=":pushservice" />
+
+        <service
+            android:name="com.xiaomi.mipush.sdk.PushMessageHandler"
+            android:enabled="true"
+            android:exported="true"
+            android:permission="com.xiaomi.xmsf.permission.MIPUSH_RECEIVE" />
+
+        <service
+            android:name="com.xiaomi.mipush.sdk.MessageHandleService"
+            android:enabled="true"/>
+
+        <receiver
+            android:name="com.xiaomi.push.service.receivers.NetworkStatusReceiver"
             android:exported="true">
             <intent-filter>
-                <!-- 接收push消息 -->
-                <action android:name="com.vivo.pushclient.action.RECEIVE" />
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
+                <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </receiver>
 
-        <meta-data
-            android:name="com.vivo.push.api_key"
-            android:value="c5d44af90f8d299c2be5e8bd34b451b5" />
-        <meta-data
-            android:name="com.vivo.push.app_id"
-            android:value="105544459" />
+        <receiver
+            android:name="com.xiaomi.push.service.receivers.PingReceiver"
+            android:exported="false"
+            android:process=":pushservice">
+            <intent-filter>
+                <action android:name="com.xiaomi.push.PING_TIMER"/>
+            </intent-filter>
+        </receiver>
 
-        <!--vivo Push SDK的版本信息-->
-        <meta-data
-            android:name="sdk_version_vivo"
-            android:value="484"/>
+        <receiver
+            android:name="cn.leancloud.LCMiPushMessageReceiver"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.xiaomi.mipush.RECEIVE_MESSAGE"/>
+            </intent-filter>
+            <intent-filter>
+                <action android:name="com.xiaomi.mipush.MESSAGE_ARRIVED"/>
+            </intent-filter>
+            <intent-filter>
+                <action android:name="com.xiaomi.mipush.ERROR"/>
+            </intent-filter>
+        </receiver>
+        <!-- 即时通讯和推送都需要 PushService -->
+        <service android:name="cn.leancloud.push.PushService"/>
+        <receiver android:name="cn.leancloud.push.LCBroadcastReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <action android:name="android.intent.action.USER_PRESENT"/>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+            </intent-filter>
+        </receiver>
+        <!-- 即时通讯和推送 END -->
     </application>
 </manifest>
