--- a/flutter_leave_lc/android/app/src/profile/AndroidManifest.xml
+++ b/flutter_leave_lc/android/app/src/profile/AndroidManifest.xml
@@ -3,5 +3,12 @@
     <!-- Flutter needs it to communicate with the running application
          to allow setting breakpoints, to provide hot reload, etc.
     -->
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <!-- 小米 SDK 需要的权限。 -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <permission android:name="com.example.flutterapplc.permission.MIPUSH_RECEIVE"
+        android:protectionLevel="signature" />
+    <uses-permission android:name="com.example.flutterapplc.permission.MIPUSH_RECEIVE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 </manifest>
