第一次提交到应用商店版本

--- a/flutter_leave_lc/android/app/build.gradle
+++ b/flutter_leave_lc/android/app/build.gradle
@@ -57,14 +57,14 @@ android {
         }
     }
     buildTypes {
-//        debug {
-//            signingConfig signingConfigs.debug
-//        }
+        debug {
+            signingConfig signingConfigs.debug
+        }
         release {
-//            minifyEnabled false
-//            shrinkResources false
-//            zipAlignEnabled false
-//            signingConfig signingConfigs.release
+            minifyEnabled false
+            shrinkResources false
+            zipAlignEnabled false
+            signingConfig signingConfigs.release
         }
     }
 }
