--- a/flutter_leave_lc/android/app/src/main/AndroidManifest.xml
+++ b/flutter_leave_lc/android/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name=".MyApp"
-        android:label="LeaveTD"
+        android:label="LeanCloud"
         android:allowBackup="true"
         android:supportsRtl="true"
         android:icon="@mipmap/ic_launcher"
